# rust-web-template

./: .gitignore  build_docker  run_docker  run_nginx  run_server
nginx/: docker-compose.yml  nginx.conf
rust-web/: .dockerignore  .env.sample  Cargo.toml  Dockerfile  config.json.sample  docker-compose.yml
rust-web/SQL/: login_user.sql  select_groups.sql
rust-web/lib_app_state/: Cargo.toml
rust-web/lib_app_state/src/: lib.rs
rust-web/lib_config/: Cargo.toml
rust-web/lib_config/src/: lib.rs
rust-web/lib_crypto/: Cargo.toml  rsa_generator
rust-web/lib_crypto/src/: base64.rs  hash.rs  jwt.rs  lib.rs  rsa.rs
rust-web/lib_error/: Cargo.toml
rust-web/lib_error/src/: http.rs
rust-web/lib_middleware/: Cargo.toml
rust-web/lib_middleware/src/: lib.rs
rust-web/lib_redis/: Cargo.toml
rust-web/lib_redis/src/: lib.rs
rust-web/lib_schema/: Cargo.toml
rust-web/lib_schema/src/public/: groups.rs  users.rs
rust-web/lib_sql_lib/: Cargo.toml
rust-web/lib_sql_lib/src/: common.rs
rust-web/migrations/: 20241009203556_users.sql  20241026181227_groups.sql  20241212151812_new_group_insert.sql  20241212154924_user_functions.sql
rust-web/srv_backend/: Cargo.toml
rust-web/srv_backend/src/: lib.rs  main.rs
rust-web/srv_backend/src/handlers/: base.rs  google.rs  groups.rs  index.rs  login.rs  mod.rs  register.rs  servers.rs  session.rs  users.rs
rust-web/srv_backend/templates/: index.html  login.html  register.html  session.html  token.html
