[workspace]

resolver = "2"

members = [ "lib_app_state",
    'lib_config',
    'lib_crypto',
    'lib_error',
    'lib_middleware',
    'lib_redis',
    'lib_schema',
    'lib_sql_lib',
    'srv_backend',
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rsa = "0.9.7"
log = "0.4.20"
rand = "0.8.5"
bcrypt = "0.16.0"
dotenv = "0.15.0"
askama = "0.12.1"
jsonwebtoken = "9"
actix-web = "4.4.0"
base64-url = "3.0.0"
env_logger = "0.11.6"
async-trait = "0.1.73"
serde_json = "1.0.107"
ansi-escapes = "0.1.1"
futures-util = "0.3.28"
derive_more = "0.99.17"
actix-web-lab = "0.20.0"
tokio-postgres = "0.7.10"
tokio-pg-mapper = "0.2.0"
postgres-from-row = "0.5.2"
actix-web-httpauth = "0.8.1"
tokio-pg-mapper-derive = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = {version = "1.0.188", features = ["derive"]}
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-redis = { version = "0.18", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
actix-session = {version = "0.8.0", features = ["cookie-session"]}
uuid = { version = "1.11.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
