[package]
name = "lib_app_state"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-redis = { version = "0.18", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

lib_config = { path = "../lib_config" }
