[package]
name = "lib_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.7"
rand = "0.8.5"
bcrypt = "0.16.0"
jsonwebtoken = "9"
base64-url = "3.0.0"
serde = { version = "1.0.188", features = ["derive"] }

lib_config = { path = "../lib_config" }
