[package]
name = "lib_crypto"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bcrypt = { workspace = true }
base64-url = { workspace = true }
jsonwebtoken = { workspace = true }

lib_config = { path = "../lib_config" }
