[package]
name = "lib_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
actix-web = "4.4.0"
derive_more = "0.99.17"
serde = {version = "1.0.188", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }