[package]
name = "lib_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.7"
log = "0.4.20"
rand = "0.8.5"
bcrypt = "0.16.0"
jsonwebtoken = "9"
actix-web = "4.4.0"
base64-url = "3.0.0"
serde_json = "1.0.107"
derive_more = "0.99.17"
serde = {version = "1.0.188", features = ["derive"]}
deadpool-redis = { version = "0.18", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
