[package]
name = "lib_error"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bcrypt = { workspace = true }
actix-web = { workspace = true }
base64-url = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
jsonwebtoken = { workspace = true }
deadpool-redis = { workspace = true }
