[package]
name = "lib_middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
actix-web = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
actix-web-httpauth = { workspace = true }

lib_app_state = { path = "../lib_app_state" }
lib_config = { path = "../lib_config" }
lib_crypto = { path = "../lib_crypto" }
lib_error = { path = "../lib_error" }
lib_redis = { path = "../lib_redis" }
