[package]
name = "lib_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
futures-util = "0.3.28"
env_logger = "0.11.6"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
deadpool-redis = { version = "0.18", features = ["serde"] }
postgres-from-row = "0.5.2"
log = "0.4.20"


lib_config = { path = "../lib_config" }
