[package]
name = "lib_redis"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-redis = { workspace = true }
tokio-pg-mapper = { workspace = true }
postgres-from-row = { workspace = true }
tokio-pg-mapper-derive = { workspace = true }

lib_config = { path = "../lib_config" }
