[package]
name = "lib_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
serde = {version = "1.0.188", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }

lib_sql_lib = {path = "../lib_sql_lib"}