[package]
name = "lib_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

lib_sql_lib = {path = "../lib_sql_lib"}
