[package]
name = "srv_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.20"
dotenv = "0.15.0"
jsonwebtoken = "9"
actix-web = "4.4.0"
env_logger = "0.10.0"
ansi-escapes = "0.1.1"
serde_json = "1.0.107"
actix-web-lab = "0.20.0"
actix-web-httpauth = "0.8.1"
actix-session = {version = "0.8.0", features = ["cookie-session"]}
serde = {version = "1.0.188", features = ["derive"]}
tokio = {version = "1.32.0", features = ["full"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }

lib_config = {path = "../lib_config"}
lib_middleware = {path = "../lib_middleware"}
lib_schema = {path = "../lib_schema"}
lib_error = {path = "../lib_error"}
lib_sql_lib ={ path = "../lib_sql_lib"}
