[package]
name = "srv_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
dotenv = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
actix-web = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
ansi-escapes = { workspace = true }
actix-web-lab = { workspace = true }
deadpool-redis = { workspace = true }
actix-session = { workspace = true }
actix-web-httpauth = { workspace = true }

lib_error = {path = "../lib_error"}
lib_redis = {path = "../lib_redis"}
lib_config = {path = "../lib_config"}
lib_schema = {path = "../lib_schema"}
lib_crypto = {path = "../lib_crypto"}
lib_sql_lib ={path = "../lib_sql_lib"}
lib_app_state = {path = "../lib_app_state"}
lib_middleware = {path = "../lib_middleware"}
